# visual_SLAM_learning

./: README.md
ch1/: README.md
ch1/PA1/: short_answers.txt
ch1/PA1/q4_cmake_practice/: README.md
ch1/PA1/q4_cmake_practice/hello_lib/: CMakeLists.txt
ch1/PA1/q4_cmake_practice/hello_lib/cmake/: FindHello.cmake
ch1/PA1/q4_cmake_practice/hello_lib/src/: CMakeLists.txt
ch1/PA1/q4_cmake_practice/say_hello/: CMakeLists.txt  useHello.cpp
ch1/PA1/q5_gframework_practice/: CMakeLists.txt  README.md
ch1/PA1/q5_gframework_practice/include/: hello.h
ch1/PA1/q5_gframework_practice/src/: CMakeLists.txt  hello.cpp  useHello.cpp
ch1/PA1/q5_gframework_practice/test/: CMakeLists.txt  testUseHello.cpp
ch1/PA1/q7_ORB_SLAM_test/: README.md
ch2/: README.md
ch2/PA2/: short_answers.txt
ch2/PA2/q2_eigen_practice/: CMakeLists.txt  eigen_practice.cpp
ch2/PA2/q4_geometry_practice/: CMakeLists.txt  geometry_practice.cpp
ch3/: README.md
ch3/PA3/: short_answers.txt
ch3/PA3/q7_trajectory_viz/: CMakeLists.txt  draw_trajectory.cpp
ch3/PA3/q7_trajectory_viz/.cache/clangd/index/: draw_trajectory.cpp.0219A1DAC28E950E.idx
ch3/PA3/q8_trajectory_error_analysis/: CMakeLists.txt  trajectory_rmse.cpp
ch4/: README.md
ch4/PA4/: short_answers.txt
ch4/PA4/q2_undistort_image/: CMakeLists.txt  undistort_image.cpp
ch4/PA4/q3_undistort_fisheye/: CMakeLists.txt  fisheye.cpp
ch4/PA4/q4_stereo_disparity/: CMakeLists.txt  disparity.cpp
ch4/PA4/q6_gauss_newton/: CMakeLists.txt  gaussnewton.cpp
ch5/PA5/: README.md  short_answers.txt
ch5/PA5/q2_compute_ORB/: CMakeLists.txt  computeORB.cpp
ch5/PA5/q3_recover_pose/: CMakeLists.txt  E2Rt.cpp
ch5/PA5/q4_bundle_adjustment/: CMakeLists.txt  GN-BA.cpp
ch5/PA5/q5_align_trajectory_icp/: CMakeLists.txt  align_trajectory_icp.cpp
ch6/: README.md
ch6/PA6/: short_answers.txt
ch6/PA6/direct_method/: CMakeLists.txt  direct_method.cpp
ch6/PA6/optical_disparity/: CMakeLists.txt  optical_disparity.cpp
ch6/PA6/q2_optical_flow/: CMakeLists.txt  optical_flow.cpp
ch7/: README.md
ch7/PA7/: short_answers.txt
ch7/PA7/q2_bal/: CMakeLists.txt  bal.cpp  bal.h  compute_bal.cpp  final.ply  initial.ply  random.h  rotation.h
ch7/PA7/q3_directBA/: CMakeLists.txt  directBA.cpp
ch7/PA7/q3_directBA/.cache/clangd/index/: directBA.cpp.50C731F92FE0A2B2.idx
ch8/: README.md
ch8/PA8/stereo_vo/: CMakeLists.txt
ch8/PA8/stereo_vo/app/: CMakeLists.txt  run_kitti.cpp
ch8/PA8/stereo_vo/config/: config.yaml
ch8/PA8/stereo_vo/include/: Camera.h  Config.h  Feature.h  Frame.h  Map.h  Mappoint.h  Optimizer.h  System.h  Tracker.h  Visualizer.h  g2o_types.h
ch8/PA8/stereo_vo/src/: CMakeLists.txt  Camera.cpp  Config.cpp  Frame.cpp  Map.cpp  Mappoint.cpp  Optimizer.cpp  System.cpp  Tracker.cpp  Visualizer.cpp
